Carlos Rueda - MMI / MBARI
$Id$

ChangeLog

2009-05-08
	- if the "uri" parameter is included, resolve by the given URI, which is done 
	  via a SPARQL query that depends on the "form" parameter. If form is "html" 
	  or "csv" a SELECT query, otherwise, for "owl", "rdf", "n3", a CONSTRUCT query.
	  The sparql dispatcher has been updated to handle these possible formats.
	
2009-05-07
	- MmiUri(String): prevent NPE when there is no path in the URI
	
2009-04-29:
	- Some refactorings/clean-up:
		- new RegularFileDispatcher
		- moved some misc operations into a new MiscDispatcher
		- preliminary code for dispatching an image request
		
2009-04-07:
	- Fix of issue #123: "encoded URI not properly handled" (MmiUri, MmiUriTest)

2009-04-01
	- HtmlDispacher.appendHtmlIfResolvableByThisService is now the way to properly
	  prepare refered resources that are resolvable by the service (so they are links 
	  to the HTML format as well).
	  
	- code clean-up: moved some special dispatchs from _resolveUri.
	
	
2009-03-27
	- UriResolver: some doc updates and minor code re-arrangements (no changes in logic)
	
	- JenaUtil2: some pending renamings done:
		getURIForBase --> removeTrailingFragment
		getURIForNS   --> appendFragment
	
	- Sparql: enabled DESCRIBE responses.
	
	- Fixed 100: "term URI always resolved in HTML"
		- TermExtractor: extracts a model with information about the requested entity.
		- UriResolver._resolveUriOntFormat: serialized resulting model in the requested format. 
	
2009-03-21
	- Just comment about Omv.acronym saying that is about "resourceType" not "shortName"
       
	 
2009-03-19:   (1.0.0.beta)
	- Issue 8: "Improve HTML response"
	  Added a header with logo and links to semanticframework

2009-03-17:   (0.2.0.beta7)
	- Code clean-up:
		- Removed unused types: MdDispatcher, MdHelper, AttrGroup, AttrDef.
		  Medatada is handled in "ontmd" project. See 2008-11-14 comment below.
		
		
		
2009-03-16: